<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_white"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_table"
            android:icon="@drawable/ic_table_white"
            android:title="@string/menu_tables" />
        <item
            android:id="@+id/nav_tablet"
            android:icon="@drawable/ic_tablet_white"
            android:title="@string/menu_tablets" />
        <item
            android:id="@+id/nav_pizzas"
            android:icon="@drawable/ic_pizza_white"
            android:title="@string/menu_pizzas" />
        <item
            android:id="@+id/nav_casters"
            android:icon="@drawable/white_pizza_icon"
            android:title="@string/menu_casters" />
        <item
            android:id="@+id/nav_employees"
            android:icon="@drawable/ic_account_circle_white"
            android:title="@string/menu_employees" />
        <item
            android:id="@+id/nav_commands"
            android:icon="@drawable/ic_action_document"
            android:title="@string/menu_commands" />
    </group>

</menu>
